--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1 class="h1">Rock, Paper, Scissors</h1>
+        <h1 class="h1">Rock, Paper, Scissors YEAH ITS FUN!</h1>
             
         </div>
     </header>
