--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1 class="h1">Rock, Paper, Scissors YEAH ITS FUN!</h1>
+        <h1 class="h1">Rock, Paper, Scissors HECK YEAH!</h1>
             
         </div>
     </header>
@@ -53,12 +53,9 @@
                 <ul>
                     <li><div><span id="comentate"></span></div></li>
                     <li><div>Wins: <span id="wins"></span></div></li>
-
-                    <li><div>Losses: <span id="losses"></span></div></li>
-
-                    <li><div>Draw: <span id="draw"></span></div></li>
-
-                        <li><div>Total: <span id="total"></span></div></li>
+                     <li><div>Losses: <span id="losses"></span></div></li>
+                     <li><div>Draw: <span id="draw"></span></div></li>
+                     <li><div>Total: <span id="total"></span></div></li>
             </ul>
             </section>
     </main>
